--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.5",
+    "react-native": "^0.59.6",
     "react-native-gesture-handler": "^1.1.0",
-    "react-navigation": "^3.8.1"
+    "react-native-i18n": "^2.0.15",
+    "react-native-router-flux": "^4.0.6",
+    "react-navigation": "^3.8.1",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
