--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "react-native": "^0.59.6",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-i18n": "^2.0.15",
+    "react-native-root-toast": "^3.0.2",
     "react-native-router-flux": "^4.0.6",
     "react-navigation": "^3.8.1",
     "react-redux": "^7.0.3",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
